[project]
name = "tempo-core"
version = "0.1.0"
description = "Unreal Engine modding library, that covers project management, automated builds, and more"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "Mythical", email = "MythicalData@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "screeninfo>=0.8.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "pre-commit>=4.2.0",
]

[project.urls]
Documentation = "https://github.com/Tempo-Organization/tempo_core/blob/main/README.md"
Issues = "https://github.com/Tempo-Organization/tempo_core/issues"
Source = "https://github.com/Tempo-Organization/tempo_core"

[tool.typos]
[tool.typos.default]
extend-words = { ue = "ue" }

[tool.pyright]
extraPaths = [".venv/Lib/site-packages"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
